fixtures/metadata-resolve/failing/models/missing_object_type/resolve_error.expected
Error: The data type 'dogs_object (in subgraph default)' for model 'dogs (in subgraph default)' has not been defined
    ╭─[ <unknown>:12:27 ]
    │
 12 │             "objectType": "dogs_object",
    │                           ──────┬──────  
    │                                 ╰──────── Model 'dogs' uses data type 'dogs_object', but it cannot be found in this subgraph
────╯
